Fixed with the error: comments not showing up for all products, also added user real name so now you can see comments with the actual user who typed it rather than 'user wrote'

--- a/front-end/src/components/Comments.css
+++ b/front-end/src/components/Comments.css
@@ -28,7 +28,7 @@
     padding: 10px;
     border: none;
     border-radius: 10px;
-    font-size: 14px;
+    font-size: 10px;
     
     color: black;
     font-family: Figtree;
